Remove warnings (unused imports, use of deprecated API)